Bug 130071 - Shortcuts don't work in Find&Replace dialog if vcl=kde5 and LANG=ru_RU.UTF8
Summary: Shortcuts don't work in Find&Replace dialog if vcl=kde5 and LANG=ru_RU.UTF8
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.4.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.0.0 target:6.3.6 target:6.4.2
Keywords: bibisectRequest, regression
Depends on:
Blocks: Shortcuts-Accelerators KDE, KF5
  Show dependency treegraph
 
Reported: 2020-01-18 14:52 UTC by Max
Modified: 2020-03-05 09:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Max 2020-01-18 14:52:36 UTC
Description:
Shortcuts (ALT_L + trigger_letter) don't effect in Find & Replace dialog if vcl=kde5 and LANG=ru_RU.UTF8.
I press ALT_L + trigger_letter but nothing changes in a text. Trigger_letter is continued typed in  field for find or replace, depending where a cursor is set.
If run LOO in terminal "qt.xkb.compose: failed to create compose table" message appears when open Find&Replace dialogue. 

I tested for Writer and Calc. 
I can workaround one by changing vcl=gtk or LC_ALL=C.
Vers: 6.3.4.2.0+
ID: Gentoo official package
CPU: 12; OS:Linux 4.19; VCL: kde5; 
Locale: ru-RU (ru_RU.UTF8); UI-Language: ru-RU
Calc: threaded

P.S.
LOO 6.2 (up to 6.2.8) works fine

Steps to Reproduce:
1. Run LANG=ru_RU.UTF-8 libreoffice
2. Create new text document  
3. Type any text.
4. Open Find&Replace by any way
5. Type any text in field "Найти"
6. Press shortcut ALT_L + "й" for start searching
7. Searching doesn't happen, letter "й" is typed after text inputed previously 

Actual Results:
Shortcut doesn't affect on dialogue behaviour 

Expected Results:
Shortcut affect on dialogue behaviour 


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Julien Nabet 2020-01-18 18:16:31 UTC
Roman: thought you might be interested in this one.
Comment 2 Roman Kuznetsov 2020-01-18 20:10:45 UTC
confirm in

Версия: 6.5.0.0.alpha0+
ID сборки: 6095612850973388ba5b121b34d02292a2548e7d
Потоков ЦП: 4; ОС:Linux 5.4; Отрисовка ИП: по умолчанию; VCL: kf5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-01-17_00:43:05
Локаль: ru-RU (ru_RU.UTF-8); Язык интерфейса: ru-RU
Calc: threaded

on Windows it works as expected

And it's a regression if Max says 6.2 works fine here
Comment 3 Michael Weghorn 2020-02-19 18:17:12 UTC
Some questions to narrow this down a bit:

Does it work for other dialogs, like e.g. the "Tools" -> "Options" one?

Does it work with LC_ALL=C.UTF-8 as well (not just LC_ALL=C)?

Can you please paste the output of the 'locale' command?
Comment 4 Roman Kuznetsov 2020-02-19 21:46:57 UTC
(In reply to Michael Weghorn from comment #3)
> Some questions to narrow this down a bit:
> 
> Does it work for other dialogs, like e.g. the "Tools" -> "Options" one?
> 
> Does it work with LC_ALL=C.UTF-8 as well (not just LC_ALL=C)?
> 
> Can you please paste the output of the 'locale' command?

I tried in Insert table dialog. Alt+russian_trigger_letter doesn't work also

With LC_ALL=C.UTF-8 Alt+russian_trigger_letter doesn't work also

nout:~$ locale
LANG=ru_RU.UTF-8
LANGUAGE=
LC_CTYPE="ru_RU.UTF-8"
LC_NUMERIC="ru_RU.UTF-8"
LC_TIME="ru_RU.UTF-8"
LC_COLLATE="ru_RU.UTF-8"
LC_MONETARY="ru_RU.UTF-8"
LC_MESSAGES="ru_RU.UTF-8"
LC_PAPER="ru_RU.UTF-8"
LC_NAME="ru_RU.UTF-8"
LC_ADDRESS="ru_RU.UTF-8"
LC_TELEPHONE="ru_RU.UTF-8"
LC_MEASUREMENT="ru_RU.UTF-8"
LC_IDENTIFICATION="ru_RU.UTF-8"
LC_ALL=

but it doesn't work with LC_ALL=C for me too..
Comment 5 Max 2020-02-20 06:03:40 UTC
I got same results as Roman wrote up
LC_ALL=C.UTF-8 and LC_ALL=C don't effect on the issue
Comment 6 Michael Weghorn 2020-02-20 11:27:45 UTC
I just downloaded 6.4 with Russian language support to test and it turned out that the (native) menu also does not work, so the simplest way to reproduce for me was:

* switch keyboard layout to Russian
* start Writer with LANG=ru_RU.UTF-8
* press Alt + в (which is located where the 'D' is on a German/US keyboard)

Instead of opening the third entry from the application menu, a literal "в" is inserted into the document.

Using gtk3 or gen VCL plugins via SAL_USE_VCLPLUGIN environment variable works fine.
Comment 7 Max 2020-02-20 21:19:40 UTC
It affects only kf5 (kde5) vcl plugin.
I don't tested if it depended on DE (plasma or kde-framework vs gnome) or window manager (kwin, openbox etc)
And one more, CTR + Cyrillic_trigger_letter works fine
Comment 8 Michael Weghorn 2020-02-21 10:06:51 UTC
First analysis: The (now abandoned) Gerrit patch [1] would fix the issue and tdf#127815 at the cost of bringing back tdf#124118, which seems to be less critical.

I plan to take another look and then discuss with jmux (Jan-Marek) how to proceed.

[1] https://gerrit.libreoffice.org/c/core/+/84821
Comment 9 Max 2020-02-22 12:39:14 UTC
May I ask you to direct your attention. If run LOO in terminal, when Find&Replace dialogue rises then in terminal appears message "qt.xkb.compose: failed to create compose table"
Comment 10 Commit Notification 2020-02-28 09:51:05 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1c6ea413cb01c0b482f87e625ba208eec230618a

tdf#130071 tdf#127815 qt5: Use ExtTextInput only for multi-char key events

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Weghorn 2020-02-28 09:55:29 UTC
(In reply to Max from comment #9)
> May I ask you to direct your attention. If run LOO in terminal, when
> Find&Replace dialogue rises then in terminal appears message
> "qt.xkb.compose: failed to create compose table"

Thanks. I'm not sure whether that's related, but the commit from comment 10 fixes the issue for me.

However, in case anybody who can actually read and understand those Russian dialogs wants to retest a bit further and give feedback, that would be appreciated. :-)

Daily builds containing the fix should be available at [1] starting tomorrow.

[1] https://dev-builds.libreoffice.org/daily/master/current.html
Comment 12 Commit Notification 2020-02-28 11:05:44 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/aea2b7b197dc1becb1149504ce0de499574504f2

tdf#130071 tdf#127815 qt5: Use ExtTextInput only for multi-char key events

It will be available in 6.3.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2020-02-28 11:06:12 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/b304ff4b7de22132d397df88cd99cea64159e24f

tdf#130071 tdf#127815 qt5: Use ExtTextInput only for multi-char key events

It will be available in 6.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Max 2020-03-02 21:56:40 UTC
Thank you very much.
I've tested LOO 6.3.6 2020-03-02.
Hotkeys work as expected in dialogs

LOO 6.4 and 7 will be tested later.
Comment 15 Michael Weghorn 2020-03-03 07:11:39 UTC
(In reply to Max from comment #14)
> Thank you very much.
> I've tested LOO 6.3.6 2020-03-02.
> Hotkeys work as expected in dialogs
> 
> LOO 6.4 and 7 will be tested later.

Thanks for testing!
Comment 16 Max 2020-03-05 09:25:03 UTC
Tested:
 LO 7.0 2020-03-01 - OK
 LO 6.4 2020-03-01 - OK
Comment 17 Xisco Faulí 2020-03-05 09:26:12 UTC
(In reply to Max from comment #16)
> Tested:
>  LO 7.0 2020-03-01 - OK
>  LO 6.4 2020-03-01 - OK

Thanks for checking.